# adventofcode

./: .gitignore  .pre-commit-config.yaml  README.md  conftest.py  pyproject.toml  requirements.txt
2015/: 22.py  AOC 2015.ipynb  aoc.py  day22.py  inputs.py
2016/: 11.py  12.py  13.py  14.py  15.py  17.py  19.py  2.py  20.py  22.py  23.py  24.py  25.py  3.py  4.py  6.py  7.py  8.py  Makefile  adrian17.py  day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day20.py  (+5 more)
2017/: .gitignore  1.py  10.py  11-axial.py  12.py  15.cpp  17.cpp  17.py  18.py  19.py  2.py  20.py  21-wrong.py  21.py  22.py  23.cpp  23.py  24.py  3.py  4.py  5.py  6.py  7.py  8.py  9.cpp  AoC 2017.ipynb  Makefile  Norvig Advent 2017.ipynb  aoc2017.py  day01.py  day02.py  day04.py  day05.py  day06.py  day07.py  day08.py  day10.py  day13.py  day14.py  day15.py  (+4 more)
2018/: 1.py  10.py  11.py  12.py  13.py  14.py  15-sciyoshi.py  15.py  16.py  17-rnbwdsh.py  18.py  2.py  20-mrfred.py  20.py  22.py  23-cheating.py  23.py  24.py  25.py  5.py  7.py  8.py  9.py  Day 11.ipynb  Makefile  aoc2018.py  day03.py  day04.py  day05.py  day06.py  day10.py  day17.py  day18.py  day19.py  day21.py  day22.py  elf-to-c.py  elf.cpp  machine.c
2019/: 1.py  10.py  11.py  12.py  13.py  14.py  15.py  16.py  17.py  18-astar.py  18-memoize.py  18-toofast.py  18.py  19.py  2.py  20.py  21.py  22-Dementophobia.py  22-zedrdave.py  22.py  23.py  24.py  25.py  3.py  5.py  6.py  7.py  8.py  9.py  aoc.py  (+30 more)
(+55 files in other folders)
