[project]
name = "adventofcode"
version = "2025.12"
dependencies = [
    "numpy",
    "jupyter",
    "line_profiler",
    "advent-of-code-data"
]
requires-python = ">=3.12"

[dependency-groups]
dev = ["pytest", "ruff", "pre_commit"]

[tool.pytest.ini_options]
python_files = ["q*.py", "day*.py"]
python_functions = ["test_*"]
markers = [
    "real: tests against real puzzle input (may be slow)",
]
addopts = "-m 'not real'"

[tool.ruff.lint]
ignore = ["F403"]
